--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
     hooks:
     -   id: flake8
         name: Flake8
-        args: [--max-line-length=88, --ignore=F405]
+        args: ["--max-line-length=88", "--ignore=F405,W503"]
 
 -   repo: https://github.com/kyanit-project/kyanit-buildtools
     rev: 0f0962f72b04ed49ef2c6fda6c7f648c4576963f
